@@ -1,4 +1,4 @@
-package brooklyn.demo
+package brooklyn.demo.todo
 
 import java.util.List
 import java.util.Map
@@ -7,6 +7,7 @@ import org.slf4j.Logger
 import org.slf4j.LoggerFactory
 
 import brooklyn.config.BrooklynProperties;
+import brooklyn.demo.Locations;
 import brooklyn.entity.Entity
 import brooklyn.entity.basic.AbstractApplication
 import brooklyn.entity.basic.DynamicGroup
@@ -22,10 +23,13 @@ import brooklyn.entity.webapp.jboss.JBoss7Server
 import brooklyn.entity.webapp.tomcat.TomcatServer
 import brooklyn.launcher.BrooklynLauncher
 import brooklyn.location.Location
+import brooklyn.location.basic.LocalhostMachineProvisioningLocation;
+import brooklyn.location.basic.jclouds.JcloudsLocationFactory;
 import brooklyn.policy.ResizerPolicy
 
 public abstract class WebAppWideAreaExample extends AbstractApplication {
     public static final Logger LOG = LoggerFactory.getLogger(WebAppWideAreaExample)
+    static BrooklynProperties config = BrooklynProperties.Factory.newWithSystemAndEnvironment().addFromUrl("file:///tmp/brooklyn.properties");
 
     public static final List<String> DEFAULT_LOCATIONS = [ Locations.LOCALHOST ]
 
@@ -65,17 +69,19 @@ public abstract class WebAppWideAreaExample extends AbstractApplication {
                 displayNameSuffix : ' web cluster',
                 newEntity : this.&newWebCluster);
 
-    private DynamicGroup nginxEntities = new DynamicGroup([displayName: 'Web Fronts'], this, { Entity e -> (e instanceof NginxController) })
+    private DynamicGroup nginxEntities = new DynamicGroup(this, name: 'Web Fronts', { it in NginxController })
     private GeoscalingDnsService geoDns = new GeoscalingDnsService(this,
             displayName: 'Geo-DNS',
-            username: BrooklynProperties.Factory.newWithSystemAndEnvironment().getFirst("brooklyn.geoscaling.username", defaultIfNone:'cloudsoft'), 
-            password: BrooklynProperties.Factory.newWithSystemAndEnvironment().getFirst("brooklyn.geoscaling.password", failIfNone:true), 
+            username: config.getFirst("brooklyn.geoscaling.username", defaultIfNone:'cloudsoft'), 
+            password: config.getFirst("brooklyn.geoscaling.password", failIfNone:true), 
             primaryDomainName: 'geopaas.org', smartSubdomainName: 'brooklyn').
         setTargetEntityProvider(nginxEntities)
         
+        
     public static void main(String[] argv) {
-        List<Location> locations = Locations.getLocationsById(Arrays.asList(argv) ?: DEFAULT_LOCATIONS)
-    
+        List<Location> locations = 
+            Locations.getLocationsById(Arrays.asList(argv) ?: DEFAULT_LOCATIONS)
+
         JBoss7WideAreaExample app = new JBoss7WideAreaExample(displayName:'Brooklyn Wide-Area Seam Booking Example Application')
             
         BrooklynLauncher.manage(app)
@@ -84,10 +90,18 @@ public abstract class WebAppWideAreaExample extends AbstractApplication {
     
 }
 
-/** JBoss is already the default but this makes it explicit */
+/** JBoss is already the default but this makes it explicit;
+ * run with:
+ * 
+ *  java -Xmx512m -Xms128m -XX:MaxPermSize=256m -cp target/brooklyn-example-0.2.0-SNAPSHOT-with-dependencies.jar brooklyn.demo.WebAppWideAreaExample */
 public class JBoss7WideAreaExample extends WebAppWideAreaExample {
     public static void main(String[] argv) {
-        List<Location> locations = Locations.getLocationsById(Arrays.asList(argv) ?: DEFAULT_LOCATIONS)
+        List<Location> locations = [] 
+            //Locations.getLocationsById(Arrays.asList(argv) ?: DEFAULT_LOCATIONS)
+        locations += new LocalhostMachineProvisioningLocation()
+        
+        //def f = JcloudsLocationFactory.newAmazonWebServicesInstance(config)
+        //["eu-west-1", "us-west-1", "ap-southeast-1"].each { locations += f.newLocation(it) }
 
         JBoss7WideAreaExample app = new JBoss7WideAreaExample(displayName:'Brooklyn Wide-Area Seam Booking Example Application')
         
